[package]
name = "colorsquash"
version = "0.1.0"
authors = ["gennyble <gen@nyble.dev>"]
edition = "2021"
license = "ISC"
description = "A crate for quantizing colours with preference to the most frequently occuring"
repository = "https://github.com/gennyble/colorsquash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = "0.8.36"

[workspace]
members = ["squash"]
