[package]
name = "colorsquash"
version = "0.2.0"
authors = ["gennyble <gen@nyble.dev>", "novedevo <devon@nove.dev>"]
edition = "2021"
license = "ISC"
description = "A crate for quantizing colours with preference to the most frequently occuring"
repository = "https://github.com/gennyble/colorsquash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = "0.8.36"
gifed = { path = "../gifed/gifed", optional = true }
kmeans = { version = "0.2.1", optional = true }

[workspace]
members = ["squash"]
